# Telegram-Webk-GTK

./: Cargo.toml  README.md  meson.build  org.gitlab.newbyte.TelegramWebk.json
data/: com.gitlab.newbyte.TelegramWebk.appdata.xml.in  com.gitlab.newbyte.TelegramWebk.gschema.xml  meson.build  org.gitlab.newbyte.TelegramWebk.desktop.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config.rs  main.rs  meson.build  telegramwebk.gresource.xml
